<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sturik</string>
    <string name="menu_settings">Settings</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="sturik">Sturik</string>
    <string name="snake">Snake</string>
    <string name="snake_mlyny">Snake Mlyny</string>
    <string name="tetris">Tetris</string>
    <string name="tetris_mlyny">Tetris Mlyny</string>
    <string name="unimplemented_game">Game has not been implemented yet.</string>

</resources>