<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/game_board"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black" >

    <RelativeLayout
        android:layout_width="@dimen/gamepad_size"
        android:layout_height="@dimen/gamepad_size"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@android:color/transparent" >

        <ImageButton
            android:id="@+id/button_left"
            android:layout_width="@dimen/gamepad_button_size"
            android:layout_height="@dimen/gamepad_button_size"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/left"
            android:scaleType="fitXY"
            android:src="@drawable/arrow_left" />

        <ImageButton
            android:id="@+id/button_right"
            android:layout_width="@dimen/gamepad_button_size"
            android:layout_height="@dimen/gamepad_button_size"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/right"
            android:scaleType="fitXY"
            android:src="@drawable/arrow_right" />

        <ImageButton
            android:id="@+id/button_down"
            android:layout_width="@dimen/gamepad_button_size"
            android:layout_height="@dimen/gamepad_button_size"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/down"
            android:scaleType="fitXY"
            android:src="@drawable/arrow_down" />

        <ImageButton
            android:id="@+id/button_up"
            android:layout_width="@dimen/gamepad_button_size"
            android:layout_height="@dimen/gamepad_button_size"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/up"
            android:scaleType="fitXY"
            android:src="@drawable/arrow_up" />

        <ImageButton
            android:id="@+id/button_fire"
            android:layout_width="@dimen/gamepad_button_size"
            android:layout_height="@dimen/gamepad_button_size"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/up"
            android:scaleType="fitXY"
            android:src="@drawable/gamepad_center" />
    </RelativeLayout>

</RelativeLayout>